# growthlens

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
config/: scoring_weights.yaml
data/real/: companies_real_TEMPLATE.csv
data/sample/: companies_sample.csv
docs/: methodology_whitepaper.md  presentation_guide.md  real_validation_protocol.md  setup_guide.md
scripts/: make_sample_data.py  run_backtest.py  run_pipeline.py  run_real_backtest.py
src/growthlens/: __init__.py  config.py  pipeline.py
src/growthlens/backtest/: metrics.py  real.py  real_run.py  run.py  simulate.py
src/growthlens/cleaning/: normalize.py
src/growthlens/ingestion/: companies_house.py  comps_yfinance.py  macro_ecb.py  macro_eurostat.py  synthetic.py
src/growthlens/memos/: generate.py
src/growthlens/pulse/: digest.py
src/growthlens/scoring/: ge_readiness.py
tests/: test_backtest.py  test_real_backtest.py  test_scoring.py
